# esp-ppb

./: .gitignore  BUILD_IT_YOURSELF.md  README.md  frequency_hack.c  kill_monitor.sh  sdkconfig  sdkconfig.old  story.md  upload.sh
.github/: FUNDING.yml
main/: CMakeLists.txt  constant.h  font.h  ftm.h  helper.c  helper.h  helper_init.c  helper_init.h  i2c_helper.c  i2c_helper.c.old  i2c_helper.h  i2c_helper.h.old  main.c  perf.c  perf.h
schematics/: README.md
schematics/3d/3d_view/: 3d_view.mtl
schematics/production/: ESP-PPB_BOM.csv  ESP-PPB_Netlist.tel  ESP-PPB_PickAndPlace.xlsx
